exmp_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: nginx  # Replace with your actual application image
          volumeMounts:
            - mountPath: "/mnt/azure"
              name: azurefile-csi-volume
      volumes:
        - name: azurefile-csi-volume
          persistentVolumeClaim:
            claimName: azurefile-csi-pvc  # Reference to the PVC
