mysql.yml
apiVersion: v1
kind: Pod
metadata:
  name: sql-pod
spec:
  containers:
  - name: sql-container
    image: mysql:5.7
    volumeMounts:
    - mountPath: "/var/lib/mysql"
      name: ebs-storage
  volumes:
  - name: ebs-storage
    persistentVolumeClaim:
      claimName: ebs-pvc
