mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: ingress-nginx
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: sql-storage
          resources:
            requests:
              memory: "1Gi"
              
            limits:
              memory: "1Gi"
              
      volumes:
        - name: sql-storage
          persistentVolumeClaim:
            claimName: local-pvc
