frontend_service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: flaskapp
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#     targetPort: 5000
#   selector:
#     app: python-app
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: python-app
