mysql_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  names
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
