frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: a1287c0f6538a48a7974bbd160c62ec4-1695279932.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 80
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 80
